--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "react-hook-form": "^7.53.1",
     "react-i18next": "^14.1.3",
     "react-router-dom": "^6.27.0",
-    "react-virtual": "^2.10.4",
+    "@tanstack/react-virtual": "^3.13.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^4.5.5",
     "zod": "^3.23.8"
