--- a/compose/production/postgres/Dockerfile
+++ b/compose/production/postgres/Dockerfile
@@ -1,6 +1,14 @@
 FROM docker.io/postgres:16
 
+# Copy maintenance scripts
 COPY ./compose/production/postgres/maintenance /usr/local/bin/maintenance
 RUN chmod +x /usr/local/bin/maintenance/*
-RUN mv /usr/local/bin/maintenance/* /usr/local/bin \
-    && rmdir /usr/local/bin/maintenance
+RUN mv /usr/local/bin/maintenance/* /usr/local/bin && rmdir /usr/local/bin/maintenance
+
+# Install pgvector extension
+RUN apt-get update \
+    && apt-get install -y postgresql-16-pgvector \
+    && rm -rf /var/lib/apt/lists/*
+
+# Optionally, run this line if you want to create the extension by default
+# RUN echo "CREATE EXTENSION IF NOT EXISTS vector;" >> /docker-entrypoint-initdb.d/init.sql
