--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -45,6 +45,10 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   libpq-dev \
   # Translations dependencies
   gettext \
+  # High-fidelity Office conversion (Excel -> PDF via soffice)
+  libreoffice-calc \
+  libreoffice-writer \
+  libreoffice-impress \
   # entrypoint
   wait-for-it \
   # cleaning up unused files
