--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -52,6 +52,11 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   wait-for-it \
   # Translations dependencies
   gettext \
+  # High-fidelity Office conversion (Excel -> PDF via soffice)
+  libreoffice-calc \
+  libreoffice-writer \
+  libreoffice-impress \
+  libreoffice-draw \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
